@@ -1,3 +1,8 @@
+2022-02-26 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* sdas/asgb/gbmch.:
+	  Add cycle table from upstream.
+
 2022-02-26 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
 
 	* src/SDCCsymt.c,
